src/test/ui/shadowed/shadowed-trait-methods.stderr
error[E0599]: no method named `f` found for type `()` in the current scope
  --> $DIR/shadowed-trait-methods.rs:13:8
   |
LL |     ().f()
   |        ^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
LL | use foo::T;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
